2008-02-06 
	- changed , into ; in implicits.ini for TreeView

2008-02-05
gtkaml 0.1.1.0 release
	- added the Gtk.MenuItem in implicits.ini with 'new' parameter 'label'
	- fixed an issue when loooking up for constructor parameters' type
	- fixed a bug (#1) which prevented a widget from a namespace to be 
	  added into a container from another namespace (and viceversa)
	- fixed an issue (#2) with gtkaml:name and gtkaml:namespace added as
	  properties of this
	- removed the signal that caused a vala crash from example0

2008-02-03	
gtkaml 0.1.0.1 release
	- configure.ac now specifies the real required version of vala (>= 0.1.6)
	- examples are not installed in bin anymoer
	- C source for examples is not provided (is generated by gtkaml + vala)


2008-02-02: 
gtkaml 0.1 release
	- gtkaml:name and gtkaml:namespace for specifying the resulting class name/namespace
	- the gtkaml namespace name is considered the one with the URI starting with "http://gtkaml.org" 
	  (e.g. you can use xmlns:class="http://gtkaml.org" and then 
	- 'complex' attributes: tags that have the name of an attribute of the parent tag are used to 
	  specify complex widget values (e.g. tab_label parameter of add_page ())
	- 'simple' attributes as tags - the CDATA or text content is the literal;
	
2008-02-01
Rewrite:
	- finished rewrite so that we resolve the constructors and add methods for all widget tree, 
	  and _then_ render all the source
	- you can now use the name of a constructor as a boolean attribute to force using it 
	  (e.g. with_mnemonic="true"). Otherwise, one is chosen for you
	- the same with add methods: specify pack_start="true" on children of a Box 
	  and you are prompted to enter the parameters
	- signals are assigned ad-literam if the expression is in between {}

2008-01-29
Added:
	- signals (always wrapped in a lambda function)
	- attributes from the whole hierarchy
	- examples/ added to project

2008-01-25
Generates the following:
	- private/public data members