@@ -39,3 +39,5 @@ adds = insert
 #todo: support <void> for adding space no-childers?
 [Gtk.TreeView]
 adds = append_column;remove_column;insert_column
+[Gtk.TreeViewColumn]
+adds = pack_start;pack_end;add_attribute;
