@@ -6,12 +6,6 @@ description=
 run_cmd=C:\\msys\\1.0\\bin\\make.exe
 
 [files]
-current_page=3
-FILE_NAME_0=55:30:E:\\vladwork\\gtkaml-trunk\\valaml\\GtkamlClassDefinition.vala
-FILE_NAME_1=0:30:E:\\vladwork\\gtkaml-trunk\\valaml\\GtkamlSAXParser.vala
-FILE_NAME_2=705:30:E:\\vladwork\\gtkaml-trunk\\valaml\\GtkamlRootClassDefinition.vala
-FILE_NAME_3=6334:30:E:\\vladwork\\gtkaml-trunk\\valaml\\GtkamlCodeGenerator.vala
-FILE_NAME_4=2668:30:E:\\vladwork\\gtkaml-trunk\\valaml\\GtkamlImplicitsResolver.vala
-FILE_NAME_5=44:30:E:\\vladwork\\gtkaml-trunk\\valaml\\GtkamlMethod.vala
-FILE_NAME_6=239:30:E:\\vladwork\\gtkaml-trunk\\valaml\\GtkamlComplexAttribute.vala
-FILE_NAME_7=26:30:E:\\vladwork\\gtkaml-trunk\\valaml\\GtkamlAttribute.vala
+current_page=1
+FILE_NAME_0=0:30:E:\\vladwork\\giocommander\\src\\GiocmdPanel.vala
+FILE_NAME_1=22:30:E:\\vladwork\\giocommander\\src\\GiocmdFileModel.vala
